--- a/app/views/advert/firsatlar.html.erb
+++ b/app/views/advert/firsatlar.html.erb
@@ -486,7 +486,7 @@
 
 			</div>
 
-			<div style="margin-bottom:20px;" class="hidden-xs hidden-sm row">
+			<div style="margin-bottom:20px;" class=" hidden-xs hidden-sm ">
 
 				<img width="100%;" src="/resources/images/asdasd3.png">
 
