--- a/app/views/advert/kategoriler.html.erb
+++ b/app/views/advert/kategoriler.html.erb
@@ -168,6 +168,8 @@
 				<%= render "smartmenus" %>
 
 			</div>
+			
+			<br class="visible-sm" >
 
 			<div id="sekizincikisim" style="margin-top:-30px;"class="row">
 
@@ -415,9 +417,9 @@
 			<br class="visible-sm visible-xs ">
 			<br class="visible-sm visible-xs ">
 
-			<div class="hidden-lg hidden-md col-lg-9 col-md-12 col-sm-12 col-xs-12" style="">
+			<div class="row" >
 
-				<div class="row">
+				<div style="padding-left: 20px; padding-right: 20px" class="row">
 
 					<div class="panel panel-success">
 
