--- a/app/views/application/_ilankategoriler.html.erb
+++ b/app/views/application/_ilankategoriler.html.erb
@@ -1,5 +1,6 @@
 <div class=" rsidebar span_1_of_left">
-	<h3 style="margin-bottom:10px;"class="cate">Kategoriler</h3>
+	<h3 style="margin-bottom:10px;"class="cate hidden-xs hidden-sm">Kategoriler</h3>
+	<h3 style="margin-bottom:10px;text-align:center;"class="cate visible-xs visible-sm"><u>Kategoriler</u></h3>
 
 	<ul class="menu-drop">
 		<li class="item1">
