--- a/app/views/index/yardim.html.erb
+++ b/app/views/index/yardim.html.erb
@@ -171,7 +171,7 @@
 
 								<div class="panel-body">
 									<a style="cursor:pointer;
-									text-decoration:none;" href="#" sonclick="changecontent5();" >-Siteniz ne kadar güvenli? </a>
+									text-decoration:none;" href="#" onclick="changecontent5();" >-Siteniz ne kadar güvenli? </a>
 								</div>
 
 								<div class="panel-body">
@@ -390,7 +390,7 @@
 				<br><br>
 				 Sistemimizin dış sanal tehditlere karşı güvenliğini sağlama konusunda elimizden geleni yaptığımızı bilmenizi istiyoruz.Güvenliği en üst seviyede tutmak için sürekli çalışmaya devam edeceğiz!!
 				<br><br>
-				Campus İlan'da güvenle ilan açabilir,kullanıcı bilgileriniz girebilir ve hizmet satın alabilirsiniz. Campus İlan'da kredi kartı kullanmadan hizmet verebilir ve satın alabilirsiniz.
+				Campus İlan'da güvenle ilan açabilir,kullanıcı bilgilerinizi girebilir ve hizmet satın alabilirsiniz. Campus İlan'da kredi kartı kullanmadan hizmet verebilir ve satın alabilirsiniz.
 				<br><br>
 				Campus İlan'ı diğer e-ticaret sitelerinden farklı kılan da bu!! Üniversitelilere özel güvenli bir platformda ilan paylaşma ve hizmet alma keyfini çıkarın.
 				
@@ -408,7 +408,7 @@
 				<br><br>
 				-Campus İlan'ın arayüzü kullanıcı dostudur. İstediğiniz sayfaya kısa sürede ulaşırsınız ve aradığınızı bulabilirsiniz. Diğer karmakarışık ilan siteleri gibi sitenin arayüzünü anlamak için saatlerinizi hatta günlerinizi harcamazsınız!!
 				<br><br>
-				Hatta ve hatta arayüzümüzü hemen kavramak için anasayfada en üst panelde yer alan Campus İlan tanıcımızı deneyebilirsiniz.İstediğiniz zaman Campus İlan tanıcısını çalıştırabilirsiniz.
+				Hatta ve hatta arayüzümüzü hemen kavramak için anasayfada en üst panelde yer alan Campus İlan tanıcımızı deneyebilirsiniz.İstediğiniz zaman Campus İlan tanıtıcısını çalıştırabilirsiniz.
 				<br><br>
 				-Campus İlan arada belli yerlere yerleştireceği anketler ile doğrudan kullanıcıların isteğine göre platformu değiştirecek ve zengileştirecektir!! Yani kısacası Campus İlan'ın arayüzüne,fonksiyonelliğine ve geleceğine siz karar verebilirsiniz!!
 			</div>
