--- a/app/views/user/member.html.erb
+++ b/app/views/user/member.html.erb
@@ -493,6 +493,8 @@
 									<div class="panel-body">
 
 										<div class="row">
+											
+											
 
 											<% @viewedadverts.each do |advert| %>
 
@@ -517,7 +519,7 @@
 
 										</div>
 
-										<% if @viewedadverts= [] %>
+										<% if @viewedadverts != [] %>
 										<br>
 										<div style="text-align:center;">
 
