--- a/app/views/advert/ikinciel.html.erb
+++ b/app/views/advert/ikinciel.html.erb
@@ -151,7 +151,9 @@
 
 		<div class="container-fluid">
 
-			<div class="visible-xs visible-sm row" style="margin-bottom: 10px;">
+			<div class="row" style="position: relative;margin-bottom: 10px;">
+
+				
 
 				<div id="loginkismi "  class="visible-xs ">
 					<!-- Login Starts Here -->
@@ -224,21 +226,21 @@
 
 							</div>
 
-							<br class="visible-sm ">
-
+							
 							<div class="col-md-6 single-top-in">
 								<div class="single-para simpleCart_shelfItem">
 
+									<h1 class="hidden-xs hidden-sm "><%= @advert.name %></h1>
+									<h1 class="visible-xs visible-sm "style="text-align:center"><u><%= @advert.name %></u></h1>
 									
-									<h1><%= @advert.name %></h1>
-									
+									<br class="visible-xs visible-sm ">
 									<br class="visible-xs visible-sm ">
 
 									<div class="visible-xs visible-sm col-md-6">
 
 										<% if @images == [] %>
 										<div>
-											<a> <%= image_tag Image.new.imagefile, :class =>"img-responsive img-rounded",  width:"100px", height:"100px" %> </a>
+											<a> <%= image_tag Image.new.imagefile, :class =>"img-responsive img-rounded",  width:"100%", height:"100%" %> </a>
 										</div>
 										<% else %>
 
@@ -246,7 +248,7 @@
 
 											<% @images[0..1].each do |image|%>
 
-											<a class="col-xs-6 col-sm-6" href="<%= image_path image.imagefile(:original) %>" data-standard="<%= image_path image.imagefile(:original) %>"> <img width="100" height="100" src="<%= image_path image.imagefile(:original) %>" alt="" class="img-rounded" /> </a>
+											<a class="col-xs-6 col-sm-6" href="<%= image_path image.imagefile(:original) %>" data-standard="<%= image_path image.imagefile(:original) %>"> <img width="100%" height="100%" src="<%= image_path image.imagefile(:original) %>" alt="" class="img-rounded" /> </a>
 
 											<% end %>
 
@@ -256,7 +258,7 @@
 
 										<div style="margin-top:20px; " class="row">
 											<% @images[2..3].each do |image|%>
-											<a class="col-xs-6 col-sm-6" href="<%= image_path image.imagefile(:original) %>" data-standard="<%= image_path image.imagefile(:original) %>"> <img width="100" height="100" src="<%= image_path image.imagefile(:original)  %>" alt="" class="img-rounded" /> </a>
+											<a class="col-xs-6 col-sm-6" href="<%= image_path image.imagefile(:original) %>" data-standard="<%= image_path image.imagefile(:original) %>"> <img width="100%" height="100%" src="<%= image_path image.imagefile(:original)  %>" alt="" class="img-rounded" /> </a>
 											<% end%>
 										</div>
 
@@ -266,7 +268,7 @@
 
 										<div style="margin-top:20px; " class="row">
 											<% @images[4..5].each do |image|%>
-											<a class="col-xs-6 col-sm-6" href="<%= image_path image.imagefile(:original) %>" data-standard="<%= image_path image.imagefile(:original) %>"> <img width="100" height="100" src="<%= image_path image.imagefile(:original)  %>" alt="" class="img-rounded" /> </a>
+											<a class="col-xs-6 col-sm-6" href="<%= image_path image.imagefile(:original) %>" data-standard="<%= image_path image.imagefile(:original) %>"> <img width="100%" height="100%" src="<%= image_path image.imagefile(:original)  %>" alt="" class="img-rounded" /> </a>
 											<% end%>
 										</div>
 
@@ -280,6 +282,8 @@
 									</div>
 
 									<br>
+									
+									<div class="hidden-sm hidden-xs">
 									<% if current_user!= nil %>
 									<% fav = FavouriteAdvert.find_by(:advert => @advert, :user => current_user) %>
 
@@ -300,9 +304,38 @@
 									</button>
 
 									<% end %>
+									
+									</div>
+									
+									
+									
+									<div style="text-align:center;" class="visible-sm visible-xs">
+									<% if current_user!= nil %>
+									<% fav = FavouriteAdvert.find_by(:advert => @advert, :user => current_user) %>
 
-									<div>
-										<div class="star-on">
+									<button <% if fav %> style="display:none;" <% end %>  class="favorilereekle btn btn-danger">
+										Favorilere Ekle
+									</button>
+
+									<button <% if !fav  %> style="display:none;" <% end %> class="favorilerdenkaldir btn btn-danger">
+										Favorilerden Kaldır
+									</button>
+
+									<% end %>
+
+									<% if @advert.user == current_user || current_user!= nil && current_user.role == 'admin' %>
+
+									<button onclick="window.location = '<%= @advert.href_guncelle %>' " class="btn  btn-danger">
+										İlanı Düzenle
+									</button>
+
+									<% end %>
+									
+									</div>
+									
+
+									<div class="row visible-sm">
+										<div class="star-on row ">
 
 											<div class = "panel panel-info">
 												<div class = "panel-heading">
@@ -348,12 +381,68 @@
 										</div>
 
 									</div>
+									
+									
+									
+									
+									<div class=" hidden-sm">
+										<div class="star-on  ">
+
+											<div class = "panel panel-info">
+												<div class = "panel-heading">
+													İlan ve Üye Bilgileri
+												</div>
+
+												<div class = "panel-body">
+
+													<% if current_user!= nil %>
+
+													<h4>Kullanıcı Güven Oyu</h4>
+													<br>
+
+													<input id="input-21b" value="<%= @vote %>" type="number" class="rating" min=0 max=5 step=1 data-size="xs">
+
+													<% end %>
+
+													
+													<div class="clearfix"></div>
+
+													<br>
+
+													<h4  class="add-to item_price">Fiyat: <span style="color:red;" ><%= @advert.price %>&#8378;</span></h4>
+													<br>
+
+													<h4  class="add-to item_price">Ürün Rengi: <span style="color:red;" ><%= @advertable.color %></span></h4>
+													<br>
+
+													<h4  class="add-to item_price">Marka: <span style="color:red;" ><%= @advertable.brand %></span></h4>
+													<br>
+
+													<h4  class="add-to item_price">Kullanım Durumu: <% if @advertable.usage %> <span style="color:red;" >Sıfır</span> <% else %> <span style="color:red;" >İkinci El</span> <% end %> </h4>
+													<br>
+
+													<h4  class="add-to item_price">Garanti Durumu: <% if @advertable.warranty %> <span style="color:red;" >Var</span> <% else %> <span style="color:red;" >Yok</span> <% end %> </h4>
+													<br>
+
+													<h4  class="add-to item_price">İlan sahibinin telefonu: <span style="color:red;" ><%= @advert_user.phone %></span></h4>
+													<br>
+													<h4> İlan sahibinin profili için <a href="/uye/<%= @advert_user.username %>">buraya</a> tıklayınız. </h4>
+												</div>
+											</div>
+										</div>
+
+									</div>
+									
+									
+									
+									
+									
 								</div>
 							</div>
 							<div class="clearfix"></div>
 							<br>
 
-							<div  class="row">
+							<div  class=" hidden-sm">
 
 								<div class="panel panel-info">
 									<div class="panel-heading">
@@ -366,7 +455,22 @@
 
 							</div>
 							
-							<div class="row">
+							<div  class="row visible-sm">
+
+								<div class="panel panel-info">
+									<div class="panel-heading">
+										Açıklama
+									</div>
+									<div style="padding-top:10px;padding-left:10px;padding-right:10px;padding-bottom:30px;" class="panel-body">
+										<%= @advert.explication  %>
+									</div>
+								</div>
+
+							</div>
+							
+							
+							
+							<div class="">
 
 							<div class = "panel panel-info">
 
@@ -377,7 +481,11 @@
 								<div style="padding:30px;" class = "panel-body">
 									
 									
-								<div style="overflow: auto;height:350px;overflow-x: hidden;-webkit-overflow-scrolling: touch"" class="row" id="disqus_thread"></div>
+								<div style="overflow: auto;height:350px;overflow-x: hidden;-webkit-overflow-scrolling: touch" class="row" id="disqus_thread">
+									
+									
+								</div>
+								
 							<script>
 								/**
 								 * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -409,13 +517,20 @@
 							</div>
 							
 							</div>
+							
+							
+							
+							
+							
+							
 
 							
 
-							<div class="benzerurunler row">
+							<div class="benzerurunler row" >
 
-								<h2 style="text-align:center;" class="">Benzer Ürünler</h2>
-
+								<h2 style="text-align:center;" class="hidden-xs hidden-sm" >Benzer Ürünler</h2>
+								<h3 style="text-align:center;" class="cate visible-xs visible-sm" ><u>Benzer Ürünler</u></h3>
+								<br class="visible-xs visible-sm">
 							</div>
 
 							<%= render "ilanbenzer" %>
