--- a/app/views/application/_headerfixed.html.erb
+++ b/app/views/application/_headerfixed.html.erb
@@ -1,8 +1,18 @@
 <header style="z-index:4;" class="header-fixed">
 
-	<div  class="header-limiter">
+	<div  style="float:left;"class="hidden-xs header-limiter">
 
-		<h1><a href="/">Campus<span> ilan</span></a></h1>
+		<h1 class="hidden-xs"><a href="/">Campus<span> ilan</span><span style="font: normal 10px  Arial, Helvetica, sans-serif;color:#828485">_beta</span></a></h1>
+		<h1 class="visible-xs"><a href="/">Campus<span> ilan</span><span style="font: normal 7px  Arial, Helvetica, sans-serif;color:#828485">_beta</span></a></h1>
+
+		
+
+	</div>
+	
+	<div  class="visible-xs header-limiter">
+
+		<h1 class="hidden-xs"><a href="/">Campus<span> ilan</span><span style="font: normal 10px  Arial, Helvetica, sans-serif;color:#828485">_beta</span></a></h1>
+		<h1 class="visible-xs"><a href="/">Campus<span> ilan</span><span style="font: normal 7px  Arial, Helvetica, sans-serif;color:#828485">_beta</span></a></h1>
 
 		
 
