--- a/app/views/application/_ilanbunlaradabakti.html.erb
+++ b/app/views/application/_ilanbunlaradabakti.html.erb
@@ -1,6 +1,7 @@
 <div class="product-bottom">
-	<h3 class="cate">Bu ürüne bakanlar bunlara da baktı</h3>
-
+	<h3 class="cate hidden-xs hidden-sm">Bu ürüne bakanlar bunlara da baktı</h3>
+	<h3 style="text-align:center;" class="cate visible-xs visible-sm"><u>Bu ürüne bakanlar bunlara da baktı</u></h3>
+	<br class="visible-sm visible-xs"> 
 	<% @looked.each do |advert|%>
 	<div class="product-go">
 		<div class=" fashion-grid">
