--- a/app/views/index/mesajlarim.html.erb
+++ b/app/views/index/mesajlarim.html.erb
@@ -187,9 +187,9 @@
 
 								</div>
 
-								<%= form_tag 'mesajlarim' , :method => :get do %>
+								<%= form_tag 'mesajlarim' ,:class =>"row", :method => :get do %>
 
-								<%= select_tag :messagetype,options_for_select([['Gelen Mesajlar','gelenmesajlar'], ['Giden Mesajlar','gidenmesajlar']],params[:messagetype]),{:onchange => "this.form.submit()"} %>
+								<%= select_tag :messagetype,options_for_select([['Gelen Mesajlar','gelenmesajlar'], ['Giden Mesajlar','gidenmesajlar']],params[:messagetype]),{:onchange => "this.form.submit()",:style => "width:20%;",:class =>"form-control" } %>
 
 								<% end %>
 
@@ -221,7 +221,7 @@
 
 											<% @messages.each do |mesaj| %>
 
-											<tr>
+											<tr id="<%= mesaj.id %>">
 
 												<td>
 												<input type="checkbox" class="checkthis" />
@@ -258,11 +258,20 @@ $(".<%= mesaj.id %>").click(function() {
 						$(".cevaplapaneli .ickisim").attr("placeholder", "<%= mesaj.from.username %>");
 
 	$(".cevaplapaneli .ickisim").val("<%= mesaj.from.username %>");
+	
+	
+	
+	 
+	
 	});
 
 	$(".<%= mesaj.id %>").click(function() {
 
 	$(".silpaneli .mesajfromid").val("<%= mesaj.id %>");
+	
+	
+	
+	
 
 	});
 
@@ -276,7 +285,7 @@ $(".<%= mesaj.id %>").click(function() {
 
 											<% @messages.each do |mesaj| %>
 
-											<tr>
+											<tr id="<%= mesaj.id %>">
 
 												<td>
 												<input type="checkbox" class="checkthis" />
@@ -369,6 +378,9 @@ $(".cevaplapaneli .ickisim").attr("placeholder", "<%= mesaj.to.username %>");
 											<span style="display:none;color:green"  class="basarili">Mesaj Başarıyla Gönderildi</span>
 										</div>
 										<div class="modal-body">
+											
+											
+											
 											<div class="form-group">
 												<%= m.text_field :username,type: "text",placeholder:"Kullanıcı Adı",class:"form-control kullaniciadi ickisim",readonly: true %>
 
@@ -384,6 +396,9 @@ $(".cevaplapaneli .ickisim").attr("placeholder", "<%= mesaj.to.username %>");
 											</div>
 										</div>
 										<div class="modal-footer ">
+											
+											
+											
 											<button onclick="mesajcevapla()" type="button" class="gonderbutonu btn btn-warning btn-lg"
 											style="width: 100%;">
 												<span class="glyphicon glyphicon-ok-sign"></span> Gönder
@@ -555,7 +570,7 @@ $(".cevaplapaneli .ickisim").attr("placeholder", "<%= mesaj.to.username %>");
 
 							<%= form_tag 'mesajlarim' , :method => :get do %>
 
-							<%= select_tag :messagetype,options_for_select([['Gelen Mesajlar','gelenmesajlar'], ['Giden Mesajlar','gidenmesajlar']],params[:messagetype]),{:onchange => "this.form.submit()"} %>
+							<%= select_tag :messagetype,options_for_select([['Gelen Mesajlar','gelenmesajlar'], ['Giden Mesajlar','gidenmesajlar']],params[:messagetype]),{:onchange => "this.form.submit()",:class => "form-control"} %>
 
 							<% end %>
 
@@ -1095,7 +1110,7 @@ $(".<%= mesaj.id %>").click(function() {
 
 							}
 
-							$modaljquery("#mesajgonder").on('hidden.bs.modal', function() {
+							$modaljquery("#mesajcevapla").on('hidden.bs.modal', function() {
 
 								$(".kullaniciadi").val("");
 								$(".konu").val("");
@@ -1200,7 +1215,9 @@ $(".<%= mesaj.id %>").click(function() {
 
 					var form = document.getElementById("mesajsilformu");
 					var mesajfromid = form.elements['mesaj_mesajfromid'].value;
+					var mesajfromid_objesi = document.getElementById(mesajfromid);
 					var mesajtoid = form.elements['mesaj_mesajtoid'].value;
+					var mesajtoid_objesi = document.getElementById(mesajtoid);
 
 					$.ajax({
 
@@ -1237,6 +1254,21 @@ $(".<%= mesaj.id %>").click(function() {
 								$(".basarisiz").hide();
 
 								$(".basarili").hide();
+								
+								if (mesajfromid_objesi != null) {
+									
+									
+									
+									mesajfromid_objesi.remove();
+									
+									
+								} else if(mesajtoid_objesi!= null) {
+									
+									mesajtoid_objesi.remove();
+									
+								}
+								
+								
 
 							});
 
@@ -1256,7 +1288,9 @@ $(".<%= mesaj.id %>").click(function() {
 
 					var form = document.getElementById("mesajsilformu2");
 					var mesajfromid = form.elements['mesaj_mesajfromid'].value;
+					var mesajfromid_objesi = document.getElementById(mesajfromid);
 					var mesajtoid = form.elements['mesaj_mesajtoid'].value;
+					var mesajtoid_objesi = document.getElementById(mesajtoid);
 
 					$.ajax({
 
@@ -1293,6 +1327,19 @@ $(".<%= mesaj.id %>").click(function() {
 								$(".basarisiz").hide();
 
 								$(".basarili").hide();
+								
+								if (mesajfromid_objesi != null) {
+									
+									
+									
+									mesajfromid_objesi.remove();
+									
+									
+								} else if(mesajtoid_objesi!= null) {
+									
+									mesajtoid_objesi.remove();
+									
+								}
 
 							});
 
